...
    <string name="household_members">Household members</string>
    <string name="add_member">Add member</string>
    <string name="edit_existing">Edit existing</string>

    <string name="logout_dialog_title">Confirm logout</string>
    <string name="logout_dialog_description">Are you sure you want to logout</string>
    <string name="logout_btn">Logout</string>

    <string name="name_label">Name</string>
    <string name="role_label">Role</string>
    <string name="phone_number_label">Phone No.</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search">Search</string>
...
    <string name="reschedule_appointment">Reschedule appointment</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_queue_question">Add to queue?</string>
    <string name="patient_arrived">Patient arrived</string>
    <string name="patient_arrived_question">Patient arrived?</string>
    <string name="mark_arrived">Mark arrived</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="no_past_appointments">No past appointments</string>
    <string name="no_upcoming_appointments">No upcoming appointments</string>
    <string name="cancel_appointment">Cancel appointment ?</string>
    <string name="yes_i_want_to_cancel">Yes, I want to cancel</string>
    <string name="today">Today</string>
    <string name="morning_slots">Morning slots</string>
    <string name="afternoon_slots">Afternoon slots</string>
    <string name="evening_slots">Evening slots</string>
...
    <string name="scheduled">Scheduled</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="walk_in">Walk-in</string>
    <string name="arrived">Arrived</string>
    <string name="status">Status</string>
    <string name="appointment_cancelled">Appointment cancelled</string>
    <string name="appointment_rescheduled">Appointment rescheduled</string>
    <string name="appointment_scheduled">Appointment scheduled</string>
    <string name="status_to_arrived">Status changed to \"Arrived\"</string>
    <string name="status_to_in_progress">Status changed to \"In-progress\"</string>
    <string name="status_to_completed">Status changed to \"Completed\"</string>
    <string name="status_updated_to_arrived">Status updated to arrived</string>
    <string name="added_to_queue">Patient being added to queue</string>
    <string name="all_slots_booked">All slots booked</string>
...
