...


                Spacer(modifier = Modifier.height(15.dp))
                Column(
                    modifier = Modifier
                        .verticalScroll(rememberScrollState())
                        .testTag("columnLayout")
                        .weight(1f)
                        .padding(it)
                ) {

                    CustomTextField(
                        viewModel.firstName,
...

@Composable
fun GenderComposable(viewModel: EditBasicInformationViewModel) {
    Row(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("genderRow"),
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(text = "Gender", style = MaterialTheme.typography.bodyLarge)
        Spacer(modifier = Modifier.width(20.dp))
        CustomFilterChip(viewModel.gender, GenderEnum.MALE.value, "Male") {
            viewModel.gender = it
...
